<resources>
    <string name="version">0.8.3.8</string>
    <string name="label_ok">Ok</string>
    <string name="label_pw_cannot_be_empty">Password cannot be empty</string>
    <string name="label_wrong_pw">Wrong password</string>
    <string name="label_use_master_password">Use Master Password</string>
    <string name="label_pls_enter_master_password">Please enter the Master Password</string>
    <string name="label_old_pw">Old Password</string>
    <string name="label_new_pw">New Password (leave blank for removing)</string>
    <string name="label_master_password">Master Password</string>
    <string name="label_create_groupchat">Create group chat</string>
    <string name="label_connect_to_chat">Connect to chat</string>
    <string name="label_refresh_chat_list">Refresh chats list</string>
    <string name="label_joinedchats">Joined chats</string>
    <string name="label_chat_name">Chat name</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_chat_id">Chat ID (letters, numbers, dash, and underscore only)</string>
    <string name="label_pwd_protected">Protect with password</string>
    <string name="label_password">Password</string>
    <string name="label_get_available_chats">Get available</string>
    <string name="label_chat_options">Chat options</string>
    <string name="label_hide_participants">Hide participants</string>
    <string name="label_show_participants">Show participants</string>
    <string name="label_chat_enter_manually">Enter manually</string>
    <string name="label_this_account_to_be_enabled">"This account to be enabled: "</string>
    <string name="label_this_account_to_be_disabled">"This account to be disabled: "</string>
    <string name="label_name">Name</string>
    <string name="label_account_activity_log">Account activity log</string>
    <string name="label_view_type">App view type (needs restart)</string>
    <string name="label_view_type_plain">Plain</string>
    <string name="label_view_type_notabs">No tabs</string>
    <string name="label_view_type_tablet">Tablet</string>
    <string name="label_copy_all">Copy all</string>
    <string name="label_personal_info">Personal info</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_autoconnect">Autoconnect on startup</string>
    <string name="label_message_sound_only">Message sound only</string>
    <string name="label_manage_visibility">Visibility</string>
    <string name="label_blink_led">Blink LED on new message</string>
    <string name="label_secure_login">Secure login</string>
    <string name="label_poweramp_playing_to_status">Send "Now playing" from PowerAMP</string>
    <string name="label_androidmusic_playing_to_status">Send "Now playing" from Android Music</string>
    <string name="label_apollo_playing_to_status">Send "Now playing" from Android Music</string>
    <string name="label_send_typing">Send typing notifications</string>
    <string name="label_fullscreen_landscape_kb">Fullscreen landscape keyboard</string>
    <string name="label_deny_messages_not_from_list">"Deny all messages from 'not in list' buddies"</string>
    <string name="label_sound_volume">Notification volume</string>
    <string name="label_buddy">"Buddy "</string>
    <string name="label_group">"Group "</string>
    <string name="label_added">" added"</string>
    <string name="label_modified">" modified"</string>
    <string name="label_deleted">" deleted"</string>
    <string name="error_fill_uid">Please fill in UID field</string>
    <string name="label_search_buddies">"Search/Add..."</string>
    <string name="label_add_to_list">"Add"</string>
    <string name="label_rename">"Rename"</string>
    <string name="label_move">"Move"</string>
    <string name="label_inempty_group">"This group is not empty. What to do with buddies
		from it?"</string>
    <string name="label_dont_draw_smileys">"Don't draw smileys"</string>
    <string name="label_size_big">Big</string>
    <string name="label_size_medium">Medium</string>
    <string name="label_size_small">Small</string>
    <string name="label_size_smallest">Smallest</string>
    <string name="label_screen_orientation">Screen orientation</string>
    <string name="label_screen_orientation_system">System</string>
    <string name="label_screen_orientation_portrait">Portrait</string>
    <string name="label_screen_orientation_landscape">Landscape</string>
    <string name="label_screen_orientation_sensor">Sensor</string>
    <string name="label_text_size">Chat font size</string>
    <string name="label_cl_item_size">Contact list item size</string>
    <string name="label_file_from">"File from "</string>
    <string name="label_files">" files"</string>
    <string name="label_add_me_request">"Hurry, add me to your list"</string>
    <string name="label_wait">Wait please...</string>
    <string name="label_export">Export to SD card</string>
    <string name="label_copied_to_clipboard">"Copied to clipboard"</string>
    <string name="label_send_file">"Send file"</string>
    <string-array name="bg_type_names">
        <item>"Black"</item>
        <item>"White"</item>
        <item>"Transparent"</item>
    </string-array>
    <string name="label_tab_style">Tabs style</string>
    <string-array name="list_tab_style_names">
        <item>"Slim"</item>
        <item>"System"</item>
    </string-array>
    <string-array name="list_chat_date_names">
        <item>"No date print"</item>
        <item>"Time only"</item>
        <item>"Full date"</item>
    </string-array>
    <string name="label_security_preferences">Security preferences</string>
    <string name="label_delete_history">"Delete history"</string>
    <string name="label_grid">Grid</string>
    <string name="label_list">List</string>
    <string name="label_doublelist">Two-column list</string>
    <string name="label_sound_type_all_on">"Sound + vibra"</string>
    <string name="label_sound_type_vibra">"Vibra only"</string>
    <string name="label_sound_type_off">"All off"</string>
    <string name="label_sound_type_profile">"Profile dependent"</string>
    <string name="label_sound_type_sound">"Sound only"</string>
    <string name="label_statusbar_type_messages">"Incoming messages"</string>
    <string name="label_statusbar_type_account_status">"Account status"</string>
    <string name="label_statusbar_type_none">"None"</string>
    <string name="label_statusbar_type_icon">Application icon</string>
    <string name="label_notinlist_save">"Save 'Not in list' group"</string>
    <string name="label_sound_type">"Sound notifications"</string>
    <string name="label_statusbar_type">"Status bar notifications"</string>
    <string name="label_contact_menu">"Contact menu"</string>
    <string name="label_im_here">"I'm here - "</string>
    <string name="label_group_menu">"Group menu"</string>
    <string name="label_auth_request">"Authorization request"</string>
    <string name="label_rename_buddy">"Rename buddy"</string>
    <string name="label_move_buddy">"Move buddy"</string>
    <string name="label_rename_group">"Rename group"</string>
    <string name="label_add_buddy">"Add buddy"</string>
    <string name="label_auth_request_from">"Authorization request from "</string>
    <string name="label_deny">"Deny"</string>
    <string name="label_allow">"Allow"</string>
    <string name="label_ignore">"Ignore"</string>
    <string name="label_add_group">"Add group"</string>
    <string name="app_name">"Asia IM"</string>
    <string name="label_wait_starting">"Starting"</string>
    <string name="label_new_account">"New account"</string>
    <string name="label_offline">" is offline"</string>
    <string name="label_online">" is online"</string>
    <string name="label_accounts">"Accounts"</string>
    <string name="label_me">"Me"</string>
    <string name="label_unread_messages">"Unread messages"</string>
    <string name="label_st_online">"Online"</string>
    <string name="label_st_offline">"Offline"</string>
    <string name="label_st_away">"Away"</string>
    <string name="label_st_na">"Not available"</string>
    <string name="label_st_busy">"Busy"</string>
    <string name="label_st_dnd">"Do not disturb"</string>
    <string name="label_st_free4chat">"Free for chat"</string>
    <string name="label_st_invisible">"Invisible"</string>
    <string name="label_st_home">"At home"</string>
    <string name="label_st_work">"At work"</string>
    <string name="label_st_angry">"Angry"</string>
    <string name="label_st_dinner">"Meal"</string>
    <string name="label_st_undetermined">"Don't show my status"</string>
    <string name="label_st_depress">"Depression"</string>
    <string name="label_unread_group">"Unread"</string>
    <string name="label_online_group">"Online"</string>
    <string name="label_offline_group">"Offline"</string>
    <string name="label_chats_group">"Group chats"</string>
    <string name="label_not_in_list_group">"Not in list"</string>
    <string name="label_connect">"Connect"</string>
    <string name="label_disconnect">"Disconnect"</string>
    <string name="label_set_status">"Set status"</string>
    <string name="label_account_settings">"Account settings"</string>
    <string name="label_preferences">"Preferences"</string>
    <string name="label_more">"More"</string>
    <string name="label_about">"About"</string>
    <string name="label_manage_accounts">"Manage accounts"</string>
    <string name="label_exit_app">"Exit Asia"</string>
    <string name="label_pick_status">"Pick a status"</string>
    <string name="label_disconnected">"Disconnected"</string>
    <string name="label_buddy_details">"Buddy details"</string>
    <string name="label_return_to_buddylist">"Return to buddy list"</string>
    <string name="label_edit">"Edit "</string>
    <string name="label_remove">"Remove "</string>
    <string name="label_are_you_sure_you_want_to_remove">"Are you sure you want to remove "</string>
    <string name="label_yes">"Yes"</string>
    <string name="label_no">"No"</string>
    <string name="label_close">"Close"</string>
    <string name="label_add_new_account">"Add new account"</string>
    <string name="label_account_type">"Account type:"</string>
    <string name="label_account_id">"Account ID:"</string>
    <string name="label_account_password">"Account password:"</string>
    <string name="label_create">"Create"</string>
    <string name="label_cancel">"Cancel"</string>
    <string name="label_sorry_back_button">"Sorry. Minimize app with Home, close from menu"
	</string>
    <string name="label_are_you_sure_you_want_to_cancel">"Are you sure you want to cancel "</string>
    <string name="label_log_to_file">"Enable log to file"</string>
    <string name="label_bg_type">"Background type"</string>
    <string name="label_show_groups">"Show groups"</string>
    <string name="label_show_offline">"Show offline buddies"</string>
    <string name="label_service_addr">"Service address"</string>
    <string name="label_service_port">"Service port"</string>
    <string name="label_history">History</string>
    <string name="label_appearance_prefs">Appearance</string>
    <string name="label_notification_prefs">Notification</string>
    <string name="label_chat_prefs">Chat</string>
    <string name="label_misc_prefs">Miscellaneous</string>
    <string name="label_account_prefs">Account preferences</string>
    <string name="label_you_must_enter_uid">"You must enter UID"</string>
    <string name="label_list_type">"Contact list type"</string>
    <string name="label_ask_xstatus">"Ask for x-status"</string>
    <string name="label_set_xstatus">"Set x-status"</string>
    <string name="label_xstatus">"X-status"</string>
    <string name="label_tabs_list">"Tabs list"</string>
    <string name="xstatus_text_title">"Title"</string>
    <string name="xstatus_text_value">"Text"</string>
    <string name="label_send_my_location">"Send my location"</string>
</resources>