<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menuitem_connect" android:icon="@drawable/login"
		android:title="@string/label_connect" />
	<item android:id="@+id/menuitem_editstatus" android:icon="@drawable/mrim_online_medium"
		android:title="@string/label_set_status" />
	<item android:id="@+id/menuitem_editxstatus" android:icon="@drawable/mrim_online_medium"
		android:title="@string/label_set_xstatus" />
	<item android:id="@+id/menuitem_showtabs" android:icon="@drawable/tabs"
		android:title="@string/label_tabs_list" />
	<!--<item android:id="@+id/menuitem_search" android:icon="@android:drawable/ic_menu_search"
		android:title="@string/label_search_buddies" />
	--><item android:id="@+id/menuitem_account" android:icon="@drawable/account_settings"
		android:title="@string/label_account_settings" />
	<item android:id="@+id/menuitem_prefs" android:icon="@drawable/preferences"
		android:title="@string/label_preferences" />
	<item android:id="@+id/menuitem_account_log" android:icon="@android:drawable/ic_menu_agenda"
		android:title="@string/label_account_activity_log" />
	<item android:id="@+id/menuitem_accounts" android:icon="@drawable/accounts"
		android:title="@string/label_manage_accounts" />
	<item android:id="@+id/menuitem_about" android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/label_about" />
	<item android:id="@+id/menuitem_exit" android:icon="@android:drawable/ic_menu_close_clear_cancel"
		android:title="@string/label_exit_app" />
</menu>
